force-app/main/default/objects/Job_Application__c/fields/Drive_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Drive_End_Date__c</fullName>
    <formula>Drive_Start_Date__c + 15</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Drive End Date</label>
    <type>Date</type>
</CustomField>