force-app/main/default/objects/Job_Application__c/fields/Drive_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Drive_Start_Date__c</fullName>
    <defaultValue>TODAY() + 1</defaultValue>
    <description>to capture date</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Please Enter the Drive Start Date</inlineHelpText>
    <label>Drive Start Date</label>
    <type>Date</type>
</CustomField>