force-app/main/default/objects/Job_Application__c/fields/Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Job_Id__c</fullName>
    <displayFormat>JI - {0000}</displayFormat>
    <label>Job Id</label>
    <type>AutoNumber</type>
</CustomField>