force-app/main/default/objects/Job_Application__c/fields/Skills_Required__c.field-meta.xml
<CustomField>
    <fullName>Skills_Required__c</fullName>
    <label>Skills Required</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Java</fullName>
            </value>
            <value>
                <fullName>Javascript</fullName>
            </value>
            <value>
                <fullName>HTML</fullName>
            </value>
            <value>
                <fullName>jQuery</fullName>
            </value>
            <value>
                <fullName>SFDC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>