force-app/main/default/objects/Job_Application__c/recordTypes/User_A.recordType-meta.xml
<RecordType>
    <fullName>User_A</fullName>
    <active>true</active>
    <label>User A</label>
</RecordType>