force-app/main/default/objects/Job_Application__c/recordTypes/User_B.recordType-meta.xml
<RecordType>
    <fullName>User_B</fullName>
    <active>true</active>
    <label>User B</label>
</RecordType>