force-app/main/default/objects/Job_Application__c/listViews/Java_Applications.listView-meta.xml
<ListView>
    <fullName>Java_Applications</fullName>
    <columns>NAME</columns>
    <columns>Job_Id__c</columns>
    <columns>Job_Type__c</columns>
    <columns>Skills_Required__c</columns>
    <columns>Drive_End_Date__c</columns>
    <columns>Drive_Start_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Skills_Required__c</field>
        <operation>includes</operation>
        <value>Java,Javascript</value>
    </filters>
    <label>Java Applications</label>
    <language>en_US</language>
</ListView>